[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/BasicEnemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
resource_local_to_scene = true
radius = 51.0
height = 104.0

[sub_resource type="CapsuleShape2D" id=2]
resource_local_to_scene = true
radius = 60.0
height = 100.0

[node name="BasicEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_hp = 2.0
mana_dropped = 5

[node name="MovingTimer" type="Timer" parent="." index="0"]
process_mode = 0
one_shot = true

[node name="StandingTimer" type="Timer" parent="." index="1"]
process_mode = 0
wait_time = 1.5
one_shot = true

[node name="Sprite" parent="EnemyBody" index="0"]
modulate = Color( 1, 0, 0, 1 )

[node name="CollisionShape2D" parent="EnemyBody" index="1"]
shape = SubResource( 1 )

[node name="Hurtbox" parent="EnemyBody" index="2"]
damage = 0.5
knockback = Vector2( 12, 12 )

[node name="CollisionShape2D" parent="EnemyBody/Hurtbox" index="0"]
shape = SubResource( 2 )
[connection signal="timeout" from="MovingTimer" to="." method="_on_MovingTimer_timeout"]
[connection signal="timeout" from="StandingTimer" to="." method="_on_StandingTimer_timeout"]
